vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/empty-struct.stderr
error: cannot derive `H5Type` for empty structs
 --> tests/compile-fail/empty-struct.rs:6:8
  |
6 | struct Foo {}
  |        ^^^
